Done with project

--- a/index.html
+++ b/index.html
@@ -15,22 +15,29 @@
 </head>
 
 <body>
+  <section class="card">
+    <div class="card_content">
+      <span class="card_content-category">perfume</span>
+      <h2 class="card_content-name">gabrielle essence eau de parfum</h2>
+      <p class="card_content-description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.</p>
+      <div class="card_content-price">
+        <span class="card_content-price-new">$149.99</span>
+        <span class="card_content-price-old">$169.99</span>
+      </div>
+      <div class="card_content_cta">
+        <img src="images/icon-cart.svg" alt="">
+        <button class="card_content_cta-btn">Add to cart</button>
+      </div>
+    </div>
+    <div class="card_img"></div>
+  </section>
 
-  Preview
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge,
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
+    Coded by <a href="https://legendary-chimera-96c039.netlify.app/">Ilhom Dadadjanov</a>.
   </div>
 </body>
 
