--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <button class="card_content_cta-btn">Add to cart</button>
       </div>
     </div>
-    <div class="card_img"></div>
+    <picture class="card_img">
+      <source media="(min-width:601px)" srcset="images/image-product-desktop.jpg">
+      <img src="images/image-product-mobile.jpg" alt="Parfume Bottle">
+    </picture>
   </section>
 
 
