--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
 </head>
 
 <body>
-  <section class="card">
-    <div class="card_content">
-      <span class="card_content-category">perfume</span>
-      <h2 class="card_content-name">gabrielle essence eau de parfum</h2>
-      <p class="card_content-description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
-        Perfumer-Creator for the House of CHANEL.</p>
-      <div class="card_content-price">
-        <span class="card_content-price-new">$149.99</span>
-        <span class="card_content-price-old">$169.99</span>
+  <main role="main" class="wrapper">
+    <section role="contentinfo" class="card">
+      <div class="card_content">
+        <span class="card_content-category">perfume</span>
+        <h1 class="card_content-name">gabrielle essence eau de parfum</h1>
+        <p class="card_content-description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.</p>
+        <div class="card_content-price">
+          <span class="card_content-price-new">$149.99</span>
+          <span class="card_content-price-old">$169.99</span>
+        </div>
+        <div class="card_content_cta">
+          <img src="images/icon-cart.svg" alt="">
+          <button class="card_content_cta-btn">Add to cart</button>
+        </div>
       </div>
-      <div class="card_content_cta">
-        <img src="images/icon-cart.svg" alt="">
-        <button class="card_content_cta-btn">Add to cart</button>
-      </div>
+      <picture class="card_img">
+        <source media="(min-width:601px)" srcset="images/image-product-desktop.jpg">
+        <img src="images/image-product-mobile.jpg" alt="Parfume Bottle">
+      </picture>
+    </section>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
+      Coded by <a href="https://legendary-chimera-96c039.netlify.app/">Ilhom Dadadjanov</a>.
     </div>
-    <picture class="card_img">
-      <source media="(min-width:601px)" srcset="images/image-product-desktop.jpg">
-      <img src="images/image-product-mobile.jpg" alt="Parfume Bottle">
-    </picture>
-  </section>
-
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
-    Coded by <a href="https://legendary-chimera-96c039.netlify.app/">Ilhom Dadadjanov</a>.
-  </div>
+  </main>
 </body>
 
 </html>
