--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <main role="main" class="wrapper">
-    <section role="contentinfo" class="card">
+  <main class="wrapper">
+    <section class="card">
       <div class="card_content">
         <span class="card_content-category">perfume</span>
         <h1 class="card_content-name">gabrielle essence eau de parfum</h1>
